err/hachoir-wx.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hachoir_wx'...
Compiling './lib/python3.5/site-packages/hachoir_wx/app.py'...
***   File "./lib/python3.5/site-packages/hachoir_wx/app.py", line 16
    print "[+] Run hachoir-wx version %s" % VERSION
                                        ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hachoir_wx/field_view'...
Compiling './lib/python3.5/site-packages/hachoir_wx/field_view/field_view_setup.py'...
***   File "./lib/python3.5/site-packages/hachoir_wx/field_view/field_view_setup.py", line 9
    print "[+] Setup field view"
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hachoir_wx/frame_view'...
Compiling './lib/python3.5/site-packages/hachoir_wx/frame_view/frame_view_setup.py'...
***   File "./lib/python3.5/site-packages/hachoir_wx/frame_view/frame_view_setup.py", line 9
    print '[+] Setup frame view'
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/hachoir_wx/hex_view'...
Compiling './lib/python3.5/site-packages/hachoir_wx/hex_view/compat_all.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (compat_all.py, line 7)
Compiling './lib/python3.5/site-packages/hachoir_wx/hex_view/hex_view.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (hex_view.py, line 18)
Compiling './lib/python3.5/site-packages/hachoir_wx/hex_view/hex_view_setup.py'...
***   File "./lib/python3.5/site-packages/hachoir_wx/hex_view/hex_view_setup.py", line 9
    print "[+] Setup hex view"
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/hachoir_wx/hex_view/stubs.py'...
***   File "./lib/python3.5/site-packages/hachoir_wx/hex_view/stubs.py", line 49
    except IOError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/hachoir_wx/resource'...
Listing './lib/python3.5/site-packages/hachoir_wx-0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
